# traffic-simulator

./: .gitignore  CMakeLists.txt  LICENSE  PoolAllocator.h  PrecompiledHeadersEdges.H  PrecompiledHeadersEdges.cpp  PrecompiledHeadersEdges.h  PrintInGDIplusWin1LN.cpp  PrintInGDIplusWin1LN.h  PrintInGDIplusWin1LP.cpp  PrintInGDIplusWin1LP.h  PrintInGDIplusWin2LN.cpp  PrintInGDIplusWin2LN.h  PrintInGDIplusWin2LP.cpp  PrintInGDIplusWin2LP.h  PrintInGDIplusWinEmpty.cpp  PrintInGDIplusWinEmpty.h  PrintInGDIplusWindow.cpp  PrintInGDIplusWindow.h  README.md  callBackFunctions.cpp  callBackFunctions.h  callBackLinks.cpp  callBackLinks.h  edge.cpp  edge.h  edgeObjectCreator.cpp  edgeObjectCreator.h  flowSimulation1NegStraight.cpp  flowSimulation1NegStraight.h  flowSimulation1PosStraight.cpp  flowSimulation1PosStraight.h  flowSimulation2NegStraight.cpp  flowSimulation2NegStraight.h  flowSimulation2PosStraight.h  flowSimulation2PosStraightA.cpp  graph.cpp  graph.h  graphTrafficGenerationOnAllRoutes.cpp  graphTrafficGenerationOnAllRoutes.h  (+45 more)
CMBuild/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TrafficSimulator.sln  TrafficSimulatorApp.vcxproj  TrafficSimulatorApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMBuild/Debug/: TrafficSimulatorApp.exe.recipe  TrafficSimulatorApp.lib  TrafficSimulatorApp.vcxproj.FileListAbsolute.txt
CMBuild/Release/: TrafficSimulatorApp.dir.lib  TrafficSimulatorApp.exe.recipe  TrafficSimulatorApp.lib  TrafficSimulatorApp.vcxproj.FileListAbsolute.txt
CMBuild/googletest/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
CMBuild/unitTest/: CTestTestfile.cmake  ExampleTests.vcxproj  ExampleTests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
CmakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj
CmakeBuild/googletest/: INSTALL.vcxproj.filters
CmakeBuild/unitTest/: CTestTestfile.cmake  ExampleTests.vcxproj  ExampleTests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters
buildCM/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Projekt1.sln  Projekt1.vcxproj  Projekt1.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildCM/googletest/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
buildCM/unitTest/: CTestTestfile.cmake  (+7 more)
googletest/: CMakeLists.txt  Example.hpp.hpp
unitTest/: CMakeLists.txt  test.cpp
(+20 files in other folders)
